# pixels

./: .gitignore  .gitmodules  AGENTS.md  LICENSE  NOTICE  README.md  deploy.sh  install.sh  pom.xml  retina.html
agents/: README.md  (+3 more)
cpp/: .gitignore  CMakeLists.txt  Makefile  MemoryMappedFile.cc  MemoryMappedFile.h  NativePixelsCacheReader.cc  NativePixelsCacheReader.h  PixelsCacheReader.cc  PixelsCacheReader.h  PixelsExtension.cpp  PixelsScanFunction.cpp  README.md  Readme.md  benchmark.json  cmake-duckdb_10  cmake-duckdb_7  perf.sh  pixels-cpp.properties  pixels-cxx.properties  pixels_extension.cpp  process_sqls.py
cpp/etc/: pixels-cpp.properties
cpp/experiments/: correctness-experiment.md
cpp/include/: PixelsExtension.hpp  PixelsReadBindData.hpp  PixelsReadGlobalState.hpp  PixelsReadLocalState.hpp  PixelsScanFunction.hpp  pixels_extension.hpp
cpp/pixels-amphi/: .gitignore  CMakeLists.txt  README.md  worker_cli.cpp
cpp/pixels-amphi-worker/: Dockerfile  README.md  config.yaml
cpp/pixels-amphi-worker/benchmark/schema/: clickbench.json  clickbench_stat.json
cpp/pixels-amphi-worker/benchmark/sql/: tpch.sql
cpp/pixels-amphi-worker/benchmark/stats/: clickbench_cost.json  clickbench_scan.json  clickbench_trino.json  tpch_cost.json  tpch_trino.json
cpp/pixels-amphi-worker/benchmark/workload/: tpch.txt
cpp/pixels-amphi-worker/resources/: CMakeLists_root.txt  CMakeLists_worker.txt
cpp/pixels-amphi/benchmark/: benchmark.cpp
cpp/pixels-amphi/resources/: CMakeLists_test.txt
cpp/pixels-amphi/tests/: CMakeLists.txt
cpp/pixels-amphi/worker/: CMakeLists.txt
cpp/pixels-cache/: .gitignore  Makefile
cpp/pixels-cache/include/: MemoryMappedFile.h  Utils.h  memory_mapped_file.h  utils.h
cpp/pixels-cache/lib/: NativeHashIndexReader.c  NativeRadixIndexReader.c  UtilsRadixIndexEndianRewriter.c  UtilsRadixTreeDumper.c  io_pixelsdb_pixels_cache_NativeHashIndexReader.c  io_pixelsdb_pixels_cache_NativeRadixIndexReader.c  io_pixelsdb_pixels_cache_utils_RadixIndexEndianRewriter.c  io_pixelsdb_pixels_cache_utils_RadixTreeDumper.c
cpp/pixels-cli/: CMakeLists.txt  Makefile  main.cpp
cpp/pixels-common/: CMakeLists.txt
cpp/pixels-common/lib/: MergedRequest.cpp
cpp/pixels-core/: CMakeLists.txt
cpp/pixels-core/include/: Category.h  PixelsBitMask.h  PixelsFilter.h  PixelsFooterCache.h  PixelsReader.h  PixelsReaderBuilder.h  PixelsReaderImpl.h  PixelsTypes.h  PixelsVersion.h  PixelsWriter.h  PixelsWriterImpl.h  TypeDescription.h
cpp/pixels-core/lib/: Category.cpp  PixelsBitMask.cpp  PixelsFilter.cpp  PixelsFooterCache.cpp  PixelsReaderBuilder.cpp  PixelsReaderImpl.cpp  PixelsVersion.cpp  PixelsWriterImpl.cpp  TypeDescription.cpp
cpp/pixels-duckdb/: PixelsScanFunction.cpp  pixels_extension.cpp
cpp/pixels-index/pixels-index-rockset/: CMakeLists.txt  README.md  RocksetJni.cpp  ci-build.sh  io_pixelsdb_pixels_index_rocksdb_RocksetIndex.h  io_pixelsdb_pixels_index_rocksdb_RocksetTest.h
cpp/pixels-reader/: .gitignore  CMakeLists.txt
cpp/pixels-reader/experiments/: pixels-experiment.md
cpp/pixels-reader/pixels-core/: CMakeLists.txt
cpp/pixels-reader/tests/: CMakeLists.txt  performance_test.cpp  unit_tests.cpp
cpp/pixels-retina/: .clang-format  CMakeLists.txt  README.md  init_shm.sh
cpp/pixels-retina/include/: EpochList.h  EpochManager.h  PatchArr.h  RGVisibility.h  RGVisibilityJni.h  Retina.h  RetinaBase.h  RetinaJni.h  RetinaMemory.h  TileVisibility.h  Visibility.h  Visibility_JNI.h  const.h  flush_writer.h  index.h  retina_service_impl.h  retina_writer_client.h  row_group_id_manager.h  shared_memory_allocator.h  states.h  status.h  test_utils.h  types.h  vectorized_row_batch.h  version.h  water_mark_manager.h
cpp/pixels-retina/lib/: EpochList.cpp  EpochManager.cpp  PatchArr.cpp  RGVisibility.cpp  RGVisibilityJni.cpp  Retina.cpp  RetinaBase.cpp  RetinaJni.cpp  TileVisibility.cpp  Visibility.cpp  Visibility_JNI.cpp
cpp/pixels-retina/memory/: CMakeLists.txt  arena.cc
cpp/pixels-retina/port/: CMakeLists.txt
cpp/pixels-retina/proto/: retina_service.proto  retina_writer.proto
cpp/pixels-retina/src/: CMakeLists.txt  retina_client.cc  retina_server.cc
cpp/pixels-retina/test/: RGVisibilityTest.cpp  RetinaTest.cpp  TileVisibilityTest.cpp  VisibilityPerformanceTest.cpp  VisibilityTest.cpp
cpp/pixels-retina/tests/: CMakeLists.txt  buffer_test.cc  retina_test.cc  version_test.cc
cpp/pixels-retina/util/: CMakeLists.txt
cpp/testcase/: README-zh.md  benchmark.json  blk_stat.py  generate_flamegraphs.sh  process_sqls.py  run_perf.py  single_doublebuffer_async_sync_test.py
cpp/testcase/buffersize-tests/: DYNAMIC_BUFFER_POOL.md  README.md  run_buffer_test.py
cpp/testcase/clickbench-gen/: clickbench-gen.sh  clickbench.schema
cpp/testcase/pixels-cli-tests/: Test.sh  complex_test.schema  gen_complex_data.py
cpp/tests/: CMakeLists.txt  performance_test.cpp  unit_tests.cpp
cpp/tests/BufferPool/: dynamic_buffer_pool_test.cpp
cpp/tests/data/: example.pxl
cpp/tests/physical/: dev.cpp
cpp/tests/writer/: CMakeLists.txt  IntegerWriterTest.cpp  PixelsWriterTest.cpp
pixels-amphi/pixels-amphi-worker/benchmark/: CMakeLists.txt  benchmark.cpp
pixels-amphi/pixels-amphi-worker/resources/: CMakeLists.txt  CMakeLists_benchmark.txt
pixels-amphi/pixels-amphi-worker/worker/: CMakeLists.txt
pixels-turbo/pixels-worker-amphi/: .gitignore  CMakeLists.txt  Makefile  README.md  config.yaml  main.cpp  worker_cli.cpp
pixels-turbo/pixels-worker-amphi/proto/: metadata.proto
pixels-turbo/pixels-worker-amphi/resources/: tpch_schema.sql
pixels-turbo/pixels-worker-amphi/tests/: CMakeLists.txt  unit_tests.cpp
pixels-turbo/pixels-worker-amphi/worker/: CMakeLists.txt
retina-cpp/tests/: CMakeLists.txt  index_test.cc
writer_cpp_test/: CMakeLists.txt  main.cpp  pixels-cxx.properties
writer_cpp_test/pixels-cli/: CMakeLists.txt  main.cpp
writer_cpp_test/pixels-common/: CMakeLists.txt
writer_cpp_test/pixels-core/: CMakeLists.txt
writer_cpp_test/pixels-core/include/: TypeDescription.h
writer_cpp_test/pixels-core/lib/: PixelsWriterImpl.cpp  TypeDescription.cpp
(+3546 files in other folders)
