project(pixels-core)

set(pixels_core_cxx
        lib/PixelsReaderImpl.cpp
        lib/PixelsReaderBuilder.cpp
        lib/reader/PixelsRecordReaderImpl.cpp
        lib/PixelsVersion.cpp
        lib/PixelsFooterCache.cpp
        lib/exception/PixelsReaderException.cpp
        lib/exception/PixelsFileMagicInvalidException.cpp
        lib/exception/PixelsFileVersionInvalidException.cpp
        lib/reader/PixelsReaderOption.cpp
        lib/TypeDescription.cpp
        lib/Category.cpp
        lib/vector/LongColumnVector.cpp
        lib/vector/VectorizedRowBatch.cpp
        lib/vector/ColumnVector.cpp
        lib/vector/ByteColumnVector.cpp
        lib/vector/BinaryColumnVector.cpp
        lib/reader/ColumnReader.cpp
        lib/reader/ColumnReaderBuilder.cpp
        lib/reader/IntegerColumnReader.cpp
        lib/reader/CharColumnReader.cpp
        lib/reader/VarcharColumnReader.cpp
        lib/reader/StringColumnReader.cpp
        lib/encoding/Decoder.cpp
        lib/encoding/RunLenIntDecoder.cpp
        lib/encoding/Encoder.cpp
        lib/encoding/RunLenIntEncoder.cpp
        lib/encoding/EncodingLevel.cpp
        lib/utils/EncodingUtils.cpp
        lib/utils/EncodingUtils.cpp
        include/vector/DecimalColumnVector.h
        lib/vector/DecimalColumnVector.cpp
        include/reader/DecimalColumnReader.h
        lib/reader/DecimalColumnReader.cpp
        lib/vector/DateColumnVector.cpp
        include/vector/DateColumnVector.h
        include/reader/DateColumnReader.h
        lib/reader/DateColumnReader.cpp
        include/PixelsFilter.h
        lib/PixelsFilter.cpp
        include/PixelsBitMask.h
        lib/PixelsBitMask.cpp
        include/vector/TimestampColumnVector.h
        lib/vector/TimestampColumnVector.cpp
        include/reader/TimestampColumnReader.h
        lib/reader/TimestampColumnReader.cpp
        lib/writer/ColumnWriter.cpp
        lib/writer/PixelsWriterOption.cpp
        lib/encoding/EncodingLevel.cpp
        lib/PixelsWriterImpl.cpp
        lib/stats/StatsRecorder.cpp
        include/utils/BitUtils.h
        lib/utils/BitUtils.cpp
        include/writer/ColumnWriterBuilder.h
        lib/writer/ColumnWriterBuilder.cpp
        include/writer/IntegerColumnWriter.h
        lib/writer/IntegerColumnWriter.cpp
        lib/writer/DecimalColumnWriter.cpp
        include/writer/TimestampColumnWriter.h
        lib/writer/TimestampColumnWriter.cpp
        lib/writer/DateColumnWriter.cpp
        include/writer/DateColumnWriter.h
        include/utils/DynamicIntArray.h
        lib/utils/DynamicIntArray.cpp
        lib/writer/StringColumnWriter.cpp
        lib/utils/Endianness.cpp
        include/utils/Endianness.h
)

add_library(pixels-core ${pixels_core_cxx})

target_link_libraries(
        pixels-core
        pixels-common
)
SET(CMAKE_CXX_FLAGS "-mavx2")

include_directories(${CMAKE_CURRENT_BINARY_DIR}/../pixels-common/liburing/src/include)
include_directories(../pixels-common/include)
include_directories(include)
include_directories(include/writer)
include_directories(../pixels_duckdb/src/include)